force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__ContainerDetailSIType2__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ContainerDetailSIType2__c</fullName>
    <label>Container Detail on S/I-Type2</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>