force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__ContainerNo__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ContainerNo__c</fullName>
    <label>CONTAINER NO</label>
    <type>TextArea</type>
</CustomField>