force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__ContainerNumber3__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ContainerNumber3__c</fullName>
    <label>CONTAINER QNTY-3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>