force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__CONTAINERSEALNO__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CONTAINERSEALNO__c</fullName>
    <inlineHelpText>Please Entry Container Number and Seal Number in Container Detail Section at bottom. 
Also allow for direct input Container Number and Seal Number only when need to be amended manually.</inlineHelpText>
    <label>CONTAINER NO/SEAL NO</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>