force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__ContractNumber__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ContractNumber__c</fullName>
    <label>Contract Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>