force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__CreditNoteIssueDeadline__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CreditNoteIssueDeadline__c</fullName>
    <label>Credit Note Issue Deadline</label>
    <type>Date</type>
</CustomField>