force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__CusMailAutoSent__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CusMailAutoSent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MailAoutSent</description>
    <inlineHelpText>If checked, CloTra will send the cargo tracking email to the PIC of Customer and Email to</inlineHelpText>
    <label>AUTO-MAIL FOR CUSTOMER</label>
    <type>Checkbox</type>
</CustomField>