force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__Custom_Clearance_Broker__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Custom_Clearance_Broker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customs Clearance Broker</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>HBL_SHIPMENTS_BROKER</relationshipName>
    <type>Lookup</type>
</CustomField>