force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__Customer_Do_Not_Disturb_State__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Customer_Do_Not_Disturb_State__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Store Customer selection for &quot;DO NOT WANT TO EMAIL ANNOUNCE&quot; option (to whether want to receive email notification from HBL or not). 
This field is required because of limitation from SF for number of relationships in an object (15 relationships).</description>
    <label>Customer Do Not Disturb State</label>
    <type>Checkbox</type>
</CustomField>