force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__CustomerDebitDeadline__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CustomerDebitDeadline__c</fullName>
    <label>Customer Debit Note Issue Deadline</label>
    <type>Date</type>
</CustomField>