force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__CustomerShortName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CustomerShortName__c</fullName>
    <formula>clofor_com_cfs__Field1__r.clofor_com_cfs__CompanyShortName__c</formula>
    <label>Customer Short Name</label>
    <type>Text</type>
</CustomField>