force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__CustomizedShipmentOrderID2__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CustomizedShipmentOrderID2__c</fullName>
    <label>Customized Shipment Order ID-2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>