force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__CustomizedShipOrderID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CustomizedShipOrderID__c</fullName>
    <label>AMS HBL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>