force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__CustomizedShipOrderIDType2__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CustomizedShipOrderIDType2__c</fullName>
    <label>Customized Shipment Order ID Type-2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__CustomizedOrderIDType</valueSetName>
    </valueSet>
</CustomField>