force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__CustomizedShipOrderIDType__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CustomizedShipOrderIDType__c</fullName>
    <label>CUSTOMIZED SHIPMENT ORDER ID TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__CustomizedOrderIDType</valueSetName>
    </valueSet>
</CustomField>