force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__CustomsReleaseDay__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CustomsReleaseDay__c</fullName>
    <label>CUSTOMS CLEARANCE PERMIT DATE</label>
    <type>Date</type>
</CustomField>