force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__CutDay__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CutDay__c</fullName>
    <label>CUT</label>
    <type>Date</type>
</CustomField>