force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__D_O_type__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__D_O_type__c</fullName>
    <label>D/O Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>D/O Less</fullName>
            </value>
            <value>
                <fullName>D/O No.</fullName>
            </value>
            <value>
                <fullName>Attachment (荷渡指示書または専用A/Nあり)</fullName>
            </value>
            <value>
                <fullName>D/O Original</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>