force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__DATE_OF_MASTER_BL_ISSUED__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DATE_OF_MASTER_BL_ISSUED__c</fullName>
    <label>DATE OF MASTER B/L ISSUED</label>
    <type>Date</type>
</CustomField>