force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__DeadlineForPaymentOfInvoices__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DeadlineForPaymentOfInvoices__c</fullName>
    <inlineHelpText>Please enter deadline of payment. The input date will be shown in the Invoice.</inlineHelpText>
    <label>DUE DATE OF PAYMENT - EXCLUDE TAX</label>
    <type>Date</type>
</CustomField>