force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__DEBIT_CREDIT_PASSWORD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DEBIT_CREDIT_PASSWORD__c</fullName>
    <label>DEBIT/CREDIT PASSWORD</label>
    <length>20</length>
    <type>Text</type>
</CustomField>