force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__DeliveryAgent__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DeliveryAgent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Agent</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>DeliveryAgent</relationshipName>
    <type>Lookup</type>
</CustomField>