force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__DeliveryAgentShortName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DeliveryAgentShortName__c</fullName>
    <formula>clofor_com_cfs__DeliveryAgent__r.clofor_com_cfs__CompanyShortName__c</formula>
    <label>Delivery Agent Short Name</label>
    <type>Text</type>
</CustomField>