force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__DevanContact__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DevanContact__c</fullName>
    <formula>&quot; TEL: &quot;&amp; clofor_com_cfs__Devan__r.Phone 
&amp; BR() &amp;&quot; FAX: &quot;&amp; clofor_com_cfs__Devan__r.Fax</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DEVAN COMPANY DETAIL</label>
    <type>Text</type>
</CustomField>