force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__DevanningDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DevanningDate__c</fullName>
    <label>DEVAN DATE</label>
    <type>Date</type>
</CustomField>