force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__DOCUMENT_CLOSING_TIME__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DOCUMENT_CLOSING_TIME__c</fullName>
    <inlineHelpText>Deadline for Export Document from Client</inlineHelpText>
    <label>DOCUMENT CLOSING TIME</label>
    <type>DateTime</type>
</CustomField>