force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__Duty__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Duty__c</fullName>
    <label>CUSTOMS DUTY</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>