force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__DUTY_SELLING_FOR_ADVANCE_PAYMENT_LOCAL__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DUTY_SELLING_FOR_ADVANCE_PAYMENT_LOCAL__c</fullName>
    <label>DUTY SELLING FOR ADVANCE PAYMENT(LOCAL)</label>
    <summarizedField>clofor_com_cfs__AnkenMeisai__c.clofor_com_cfs__SellInTaxAmountJPY__c</summarizedField>
    <summaryFilterItems>
        <field>clofor_com_cfs__AnkenMeisai__c.clofor_com_cfs__Selling_Tatekae__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>clofor_com_cfs__AnkenMeisai__c.clofor_com_cfs__Anken__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>