force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__EstimatedTimeOfETD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__EstimatedTimeOfETD__c</fullName>
    <label>Estimated Time of ETD</label>
    <type>Time</type>
</CustomField>