force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__ETA__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ETA__c</fullName>
    <inlineHelpText>If there is no ETA in Document, confirm with Carrier or Co-loader</inlineHelpText>
    <label>ETA</label>
    <type>Date</type>
</CustomField>