force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__ETD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ETD__c</fullName>
    <label>ETD</label>
    <type>Date</type>
</CustomField>