force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__Exchange_Currency__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Exchange_Currency__c</fullName>
    <label>Exchange Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>