force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__ExpanseCondition__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ExpanseCondition__c</fullName>
    <label>PAYMENT CONDITION - EXCLUDE TAX</label>
    <length>30</length>
    <type>Text</type>
</CustomField>