force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__ExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ExpiryDate__c</fullName>
    <label>VALID TO</label>
    <type>DateTime</type>
</CustomField>