force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__ExternalSales__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ExternalSales__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EXTERNAL SALES</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>SHIPMENT_ORDER</relationshipName>
    <type>Lookup</type>
</CustomField>