force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__Field1__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Field1__c</fullName>
    <label>CUSTOMER</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>F/TMS S/O (CUSTOMER)</relationshipLabel>
    <relationshipName>HTqj</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>