force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__Filer__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Filer__c</fullName>
    <formula>null</formula>
    <inlineHelpText>The filer company who files for JP 24H Advanced Filing Rule</inlineHelpText>
    <label>JP24H FILING COMPANY</label>
    <type>Text</type>
</CustomField>