force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__Filing_Time__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Filing_Time__c</fullName>
    <label>JP24H ADVANCED FILING TIME</label>
    <type>DateTime</type>
</CustomField>