force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__FinalDestination__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__FinalDestination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Final Destination</label>
    <referenceTo>clofor_com_cfs__Port__c</referenceTo>
    <relationshipName>FTMSSOFinalDestination</relationshipName>
    <type>Lookup</type>
</CustomField>