force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__FinalDestinationDetailFormula__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__FinalDestinationDetailFormula__c</fullName>
    <formula>IF (ISBLANK(TEXT(clofor_com_cfs__FinalDestination__r.clofor_com_cfs__Country_Name__c))= TRUE, clofor_com_cfs__FinalDestination__r.Name ,(clofor_com_cfs__FinalDestination__r.Name &amp; &quot;, &quot;&amp;  text(clofor_com_cfs__FinalDestination__r.clofor_com_cfs__Country_Name__c)))</formula>
    <label>Final Destination Detail-Formula</label>
    <type>Text</type>
</CustomField>