force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__FinalDestinationDetailPrint__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__FinalDestinationDetailPrint__c</fullName>
    <formula>IF( 	clofor_com_cfs__FinalDestinationDetail__c=&quot;&quot;, 	clofor_com_cfs__FinalDestinationDetailFormula__c ,	clofor_com_cfs__FinalDestinationDetail__c	)</formula>
    <label>Final Destination Detail-Print</label>
    <type>Text</type>
</CustomField>