force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__FlgCopy__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__FlgCopy__c</fullName>
    <label>COPY FLAG</label>
    <length>10</length>
    <type>Text</type>
</CustomField>