force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__FlightNo__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__FlightNo__c</fullName>
    <label>Flight No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>