force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__FormattedETD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__FormattedETD__c</fullName>
    <formula>IF( ISBLANK( clofor_com_cfs__ETD__c ), &apos;&apos;,
TEXT(DAY( clofor_com_cfs__ETD__c )) + &apos;-&apos;+ CASE( MONTH( clofor_com_cfs__ETD__c ) ,
1, &quot;Jan&quot;,
2, &quot;Feb&quot;,
3, &quot;Mar&quot;,
4, &quot;Apr&quot;,
5, &quot;May&quot;,
6, &quot;Jun&quot;,
7, &quot;Jul&quot;,
8, &quot;Aug&quot;,
9, &quot;Sep&quot;,
10, &quot;Oct&quot;,
11, &quot;Nov&quot;,
12, &quot;Dec&quot;,
&quot;None&quot;) + &apos;-&apos; + RIGHT(TEXT(YEAR( clofor_com_cfs__ETD__c )), 2)
)</formula>
    <label>Formatted ETD</label>
    <type>Text</type>
</CustomField>