force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__Fowarding__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Fowarding__c</fullName>
    <inlineHelpText>If your company is responsible for forwarding, choose &apos;Forwarding by us&apos; and if other company is responsible for forwarding, choose &apos; Forwarding by others&apos;</inlineHelpText>
    <label>FORWARDING SERVICE PROVIDER</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>自社フォワーディング(Forwarding by us)</fullName>
                <default>true</default>
                <label>自社フォワーディング(Forwarding by us)</label>
            </value>
            <value>
                <fullName>他社フォワーディング(Forwarding by others)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>