force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__FR40Quantity__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__FR40Quantity__c</fullName>
    <formula>IF( text(clofor_com_cfs__Container__c) =&quot;40&apos;FR&quot;, clofor_com_cfs__ContainerNumber__c,
IF( text(clofor_com_cfs__Container2__c) =&quot;40&apos;FR&quot;, clofor_com_cfs__ContainerNumber2__c,
IF( text(clofor_com_cfs__Container3__c) =&quot;40&apos;FR&quot;, clofor_com_cfs__ContainerNumber3__c,
IF( text(clofor_com_cfs__Container4__c) =&quot;40&apos;FR&quot;, clofor_com_cfs__ContainerNumber4__c,
IF( text(clofor_com_cfs__Container5__c) =&quot;40&apos;FR&quot;, clofor_com_cfs__ContainerNumber6__c,
IF( text(clofor_com_cfs__Container6__c) =&quot;40&apos;FR&quot;, clofor_com_cfs__ContainerNumber5__c,
IF( text(clofor_com_cfs__Container7__c) =&quot;40&apos;FR&quot;, clofor_com_cfs__ContainerNumber7__c, 0)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>40&apos;FR Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>